@@ -179,6 +179,7 @@
   Pierre)
 - Fixed bug #47643 (array_diff() takes over 3000 times longer than php 5.2.4).
   (Felipe)
+- Fixed bug #47199 (pg_delete() fails on NULL). (ewgraf at gmail dot com)
 - Fixed bug #45921 (Can't initialize character set hebrew). (Andrey)
 - Fixed bug #44248 (RFC2616 transgression while HTTPS request through proxy
   with SoapClient object). (Dmitry)
